# console_utilities

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  buildozer.spec  console_utils.spec  console_utils_win.spec  controller_mapping.json  download.json  dw.pygame  environment.yml  index.html  main.py  pyproject.toml  test_regex.py  test_settings.py
.github/workflows/: pages.yml  release.yml
assets/: pes6_roster_map.json
assets/docs/: android.md  macos.md  pygame.md  windows.md
assets/examples/: archive_example.json
assets/scripts/: install_req.sh
assets/translations/: w202-english.ppf
docker/: Dockerfile.arm64  dockerfile.android  patch_manifest.py
docs/: adding-a-system.md  iss_deluxe_patcher_implementation.md  nhl94_genesis_patcher_implementation.md  nhl94_snes_patcher_implementation.md  pes6-eur-ram-research.md  pes6-ps2-roster-research.md  server-response-format.md  sports-rom-patcher.md  syncthing-save-sync.md  we2002_3d_jersey_patching.md  we_patcher_implementation.md
docs/discovery/: pygamenx-plan.md
docs/patching/: wes_3d.md
docs/plans/: 2026-03-09-android-parallel-download-service-design.md  2026-03-09-android-parallel-download-service.md  (+5 more)
keystore/: release.keystore
scripts/: android_emulator.sh  appetize.sh  local_release.sh  pes6_build_roster_bin.py
src/: app.py  constants.py  index.py  main.py  state.py  stream_server.py
tests/: test_flag_analyzer_mvp.py  test_nhl05_ps2_patcher.py  test_pes6_patcher.py  test_pes6_ps2_patcher.py  test_rom_finder.py  test_syncthing_discovery.py  test_we_patcher.py
(+236 files in other folders)
