[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roms_downloader"
version = "1.0.0"
description = "A Kivy-based ROM downloader for handheld gaming consoles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
    "kivy",
    "kivymd"
]

[project.scripts]
rom-downloader = "src.index:main"
roms-dl = "src.index:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]